[SELC-6373] feat: add new PartyRole ADMIN_EA_IO (#689)